Fix input bug on safari

--- a/styles/SignIn.module.css
+++ b/styles/SignIn.module.css
@@ -48,6 +48,7 @@
   user-select: none;
   outline: none;
   color: white;
+  -webkit-user-select: text;
 }
 
 .input::placeholder {
